--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode/
 .venv/
 **/esp32-blink-example/
+**/circuitpython/libArchive/
+**/circuitpython/stubArchive/
+**/cp-stage-game/libArchive/
+**/cp-stage-game/stubArchive/
+
